src/test/deca/context/invalid/resultats/test_cast_void-cont.res
./src/test/deca/context/invalid/test_cast_void.deca:23:11: Cannot cast a void type
